Cập nhật giao diện supplier và inventory